[package]
name = "rust_image_algos"
version = "0.1.0"
authors = ["Scott Cooper <scott.cooper2@mail.mcgill.ca>"]
license = "MIT/Beerware"

[dependencies]
image = "0.5.0"
docopt = "0.6.75"
rustc-serialize = "0.3.16"
crossbeam = "0.1.6"
time = "*"
simd = { git = "https://github.com/huonw/simd" }
simple_parallel = "0.3"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 4

